tests/machine/x/fortran/for_loop.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/for_loop.f90:3:6:

    3 |   do i = 1, 4
      |      1
Error: Symbol ‘i’ at (1) has no IMPLICIT type

