tests/machine/x/fortran/for_loop.f90
program main
  implicit none
  do i = 1, 4
    print *, i
  end do
end program main
